Docs de Lots com Swagger
