# src/routes/lotRoute.js
@@ -5,10 +5,10 @@ import { auth } from '../middlewares/Auth.js';
 const router = Router();
 
 router.use(auth)
-    .post("/lots/:id", LotController.create)
+    .post("/lots/create/:id", LotController.create)
     .get("/lots/company/:id", LotController.getLotsByCompany)
-    .get("lots/:id", LotController.getLotById)
-    .put("/lots/:id", LotController.updateLot)
+    .get("/lots/:id", LotController.getLotById)
+    .put("/lots/edit/:id", LotController.updateLot)
     .put("/lots/close/:id", LotController.closeLot)
 
 export default router;
